Proposed structure of the Section Precision Analysis

--- a/text/tex/OpticalLocalization_BednarikJan.tex
+++ b/text/tex/OpticalLocalization_BednarikJan.tex
@@ -70,9 +70,15 @@
 % Tables
 \usepackage{multirow}
 
+% Math symbols
+\usepackage{amsmath}
+
 %%%% Custom commands
 % particle
 \newcommand{\particle}[2]{(\vec{x_{#1}^{#2}},w_{#1}^{#2})}
+
+% argmax
+\newcommand*{\argmax}{\operatornamewithlimits{argmax}\limits}
 
 \renewcommand{\floatpagefraction}{.9}
 
