--- a/text/tex/bibliography.bib
+++ b/text/tex/bibliography.bib
@@ -848,3 +848,14 @@
 	number = "8",
 	pages = "1362--1376"
 }
+
+@book{taylor1997introduction,
+	title={An Introduction to Error Analysis: The Study of Uncertainties in Physical Measurements},
+	author={Taylor, J.R.},
+	isbn={9780935702750},
+	lccn={81051269},
+	series={A series of books in physics},
+	url={https://books.google.cz/books?id=giFQcZub80oC},
+	year={1997},
+	publisher={University Science Books}
+}
